added path variable; execute programs in path; others in CHANGELOG

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@
 # VS Code folder #
 ##################
 .vscode/
+.idea/
 
 publish.cmd
 publish.sh
+
+*.docxml
 
 ###################
 # compiled source #
